[package]
name = "futuresdr"
version = "0.0.1-experimental"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2018"

[dependencies]
config = "0.10.1"
dirs = "3.0.1"
once_cell = "1.5.2"
serde = { version = "1.0.118", features = ["derive"] }
vec-arena = "1.0.0"

[dev-dependencies]
flexbuffers = "0.2.1"
