[package]
name = "futuresdr"
version = "0.0.1-experimental"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
config = "0.10"
dirs = "3.0"
libc = "0.2"
log = { version = "0.4", features = ["std", "max_level_debug", "release_max_level_off"] }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
vec-arena = "1.0"

[dev-dependencies]
flexbuffers = "0.2"
